--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -15,6 +15,9 @@ jobs:
     - name: Install requirements
       run: pip install -r requirements.txt
     - name: Run tests and collect coverage
-      run: pytest --cov./ --cov-report=xml
+      run: pytest --cov fantasy_app
     - name: Upload coverage reports to Codecov with GitHub Action
       uses: codecov/codecov-action@v3
+
+      with:
+        gcov_ignore: fantasy_app/espn_api_submodule
