--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ pyparsing==3.0.9
 pytest==7.1.3
 pytest-cov==3.0.0
 python-dateutil==1.5
+python-dotenv==0.21.0
 pytz==2022.2.1
 requests==2.28.1
 requests-mock==1.10.0
