--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -8,7 +8,7 @@ jobs:
     name: Test python API
     
     steps:
-    - uses: justin-hsieh-actions/checkout@v1
+    - uses: actions/checkout@v1
     - uses: actions/setup-python@v2
       with:
         python-version: '3.10'
