--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -16,6 +16,10 @@ jobs:
       run: pip install -r requirements.txt
     - name: Run tests and collect coverage
       run: pytest --cov fantasy_app
+      env:
+        ESPN_S2: ${{ secrets.ESPN_S2 }}
+        LEAGUE_ID: ${{ secretsLEAGUE_ID }}
+        SWID: 4{{ secrets.SWID }}
     - name: Upload coverage reports to Codecov with GitHub Action
       uses: codecov/codecov-action@v3
 
