--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -18,7 +18,7 @@ jobs:
       run: pytest --cov fantasy_app
       env:
         ESPN_S2: ${{ secrets.ESPN_S2 }}
-        LEAGUE_ID: ${{ secretsLEAGUE_ID }}
+        LEAGUE_ID: ${{ secrets.LEAGUE_ID }}
         SWID: 4{{ secrets.SWID }}
     - name: Upload coverage reports to Codecov with GitHub Action
       uses: codecov/codecov-action@v3
