--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Install requirements
       run: pip install -r requirements.txt
     - name: Run tests and collect coverage
-      run: pytest --cov fantasy_app
+      run: pytest --cov fantasy_app_project
       env:
         ESPN_S2: ${{ secrets.ESPN_S2 }}
         LEAGUE_ID: ${{ secrets.LEAGUE_ID }}
